fix mobile spacing

--- a/src/Home.css
+++ b/src/Home.css
@@ -17,7 +17,7 @@
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
-  width: 60%;
+  width: 90%;
 }
 
 .mainSubTitle {
@@ -32,6 +32,17 @@
 }
 
 .coverPhoto img {
-  width: 60%;
+  width: 90%;
   border: 4px solid rgba(0,0,0);
+}
+
+@media only screen and (min-width: 1000px) {
+  .mainTitle {
+    width: 65%;
+  }
+
+  .coverPhoto img {
+    width: 65%;
+    border: 4px solid rgba(0,0,0);
+  }
 }
